# tauri-plugin-board

./: .gitignore  .prettierrc  Cargo.toml  LICENSE  README.md  README_zh.md  _config.yml  api-iife.js  build.rs  package.json  rollup.config.js  tsconfig.json
.changes/: config.json  initial-release.md  readme.md
.github/workflows/: ci.yml  docs.yml
_includes/: footer.html  header.html
_layouts/: default.html
android/: .gitignore  build.gradle  build.gradle.kts  gradle.properties  local.properties  local.properties.example  proguard-rules.pro  settings.gradle
android/src/androidTest/java/: DeviceInstrumentedTest.kt  ExampleInstrumentedTest.kt
android/src/main/: AndroidManifest.xml
android/src/main/java/: BoardPlugin.kt  BuildBoard.kt  BuildEnv.kt  Carbon.kt  Device.kt  DevicePlugin.kt  Driver.kt  Env.kt  SerialDevice.kt  TaskService.kt
android/src/main/java/ui/: Factory.kt  YS.kt  ZC.kt
android/src/test/java/: DeviceUnitTest.kt  ExampleUnitTest.kt
docs/: en_US.md  guide.md  index.md  zh_CN.md
docs/.vitepress/: config.ts
docs/.vitepress/locales/: en-US.ts  zh-CN.ts
docs/en-US/: guide.md  index.md
examples/: build.gradle.kts.example  proguard-rules.pro.example
examples/vanilla/src-tauri/: Cargo.toml  tauri.conf.json
examples/vanilla/src-tauri/src/: main.rs
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: change_balance.toml  exec_shipment.toml  find_change_result.toml  getBuildModel.toml  getBuildSerial.toml  get_all_devices_path.toml  get_auth_result.toml  get_box_status.toml  get_build_board.toml  get_build_env.toml  get_build_model.toml  get_build_serial.toml  get_change_status.toml  get_drop_status.toml  get_floor_types.toml  get_min_payout_amount.toml  get_pay_amount.toml  get_serial_devices_path.toml  get_serial_paths.toml  get_shipment_status.toml  get_software_version.toml  get_x_pos.toml  get_x_status.toml  get_y_pos.toml  get_y_status.toml  init_payment.toml  moto_timeout.toml  notify_payment.toml  notify_result.toml  open_file_manager.toml  open_main_activity.toml  open_setting_config.toml  pulse_balance.toml  read_hardware_config.toml  reset_lift.toml  run_moto.toml  run_shipment.toml  setGestureStatusBar.toml  setLcdOnOff.toml  setStatusBar.toml  (+17 more)
permissions/schemas/: schema.json
src/: error.rs  lib.rs  models.rs
webview-dist/: index.cjs  index.cjs.map  index.d.ts  index.js  index.mjs  index.mjs.map
webview-src/: index.d.ts  index.ts
(+5 files in other folders)
