[package]
name = "tauri-plugin-board"
version = "1.0.0"
authors = [ "cleveng <cleveng@gmail.com>" ]
description = "vending machine development board of kits for tauri, use java or kotlin"
license = "MIT"
edition = "2021"
rust-version = "1.60"
exclude = []

[dependencies]
tauri-plugin-cli = "2.0.0-beta"
tauri = { version = "2.0.0-beta", features = [] }

[build-dependencies]
tauri-plugin = "2.0.0-beta.17"
tauri-build = "2.0.0-beta.17"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true