[package]
name = "tauri-plugin-board"
version = "1.4.0-beta.19"
authors = ["cleveng <cleveng@gmail.com>"]
description = "vending machine development board of kits for tauri, use kotlin"
license = "MIT"
edition = "2021"
repository = "https://github.com/cakioe/tauri-plugin-board.git"
rust-version = "1.60.0"
exclude = []
links = "tauri-plugin-board"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tauri-plugin-cli = "2.0.0-beta"
tauri = { version = "2.0.0-beta", features = [] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
thiserror = "1.0.61"

[build-dependencies]
tauri-plugin = "2.0.0-beta.17"
tauri-build = "2.0.0-beta.17"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
