[package]
name = "tauri-plugin-board"
version = "1.7.6"
authors = ["cleveng <cleveng@gmail.com>"]
description = "vending machine development board of kits for tauri, use kotlin"
license = "MIT"
edition = "2021"
repository = "https://github.com/cakioe/tauri-plugin-board.git"
rust-version = "1.60.0"
exclude = []
links = "tauri-plugin-board"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tauri-plugin-cli = "2.0.1"
tauri = { version = "2.0.6", features = [] }
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
thiserror = "1.0.65"

[build-dependencies]
tauri-plugin = "2.0.2"
tauri-build = "2.0.2"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true


exclude = ["/docs", "/_includes", "/_site", "/_layouts", "/_config.yml", "Gemfile", "Gemfile.lock"]
